--- a/slitaz/index.pt.html
+++ b/slitaz/index.pt.html
@@ -4,25 +4,24 @@
 	<meta charset="utf-8" />
 	<title>SliTaz - System doc (pt)</title>
 	<link rel="shortcut icon" href="favicon.ico" />
-	<link rel="stylesheet" type="text/css" href="style.css" />
+	<link rel="stylesheet" type="text/css" href="../slitaz-doc.css" />
 </head>
 <body>
 
-<!-- Header -->
-<div id="header">
+<header>
 	<h1>SliTaz - System doc</h1>
-</div>
+</header>
 
 <!-- Languages -->
 <div id="lang">
 	<a href="http://www.slitaz.org/i18n.php">
-		<img src="images/locale.png" alt="locale.png" /></a>
+		<img src="images/locale.png" alt="Locale:" /></a>
 	<a href="index.cn.html">cn</a>
 	<a href="index.de.html">de</a>
 	<a href="index.en.html">en</a>
 	<a href="index.fr.html">fr</a>
 	<a href="index.hu.html">hu</a>
-	<a href="index.pt.html">pt</a>
+	<strong>pt</strong>
 	<a href="index.ru.html">ru</a>
 </div>
 
@@ -59,21 +58,21 @@ obter suporte na nossa lista de discussão ou no
 	<li><a href="http://doc.slitaz.org/pt:start">Documentação Online</a></li>
 </ul>
 
-<a name="start"></a>
-<h2>Primeiros Passos</h2>
 
-<a name="network"></a>
-<h3>Conexão de Rede</h3>
+<h2 id="start">Primeiros Passos</h2>
+
+
+<h3 id="network">Conexão de Rede</h3>
 <p>
-Clique no "Network Status Monitor" (Monitor de Status da Rede) na parte
-de baixo e direita da tela, em "Configure" e então o netbox (gerenciador
-de rede) será executado. Você pode ir até a aba "DHCP" e clicar em "Start",
+Clique no “Network Status Monitor” (Monitor de Status da Rede) na parte
+de baixo e direita da tela, em “Configure” e então o netbox (gerenciador
+de rede) será executado. Você pode ir até a aba “DHCP” e clicar em “Start”,
 e o SliTaz irá enviar uma requisição DHCP para o roteador local. Você
 também pode configurar ip estático, PPPoE, PPP, VPN e mais usando as 
 respectivas abas. Para configurar conexões wireless (sem fio) você pode
-usar o aplicativo wifibox clicando em "Wireless Manager" (Gerenciador
+usar o aplicativo wifibox clicando em “Wireless Manager” (Gerenciador
 de Redes Wireless) que se localiza no Gerenciador de Rede ou indo na
-entrada de menu "Ferramentas do Sistema" -> "Gerenciador de Redes Wireless".
+entrada de menu “Ferramentas do Sistema” → “Gerenciador de Redes Wireless”.
 </p>
 <p>
 Maiores informações podem ser encontradas no Manual Do Slitaz: 
@@ -81,15 +80,15 @@ Maiores informações podem ser encontradas no Manual Do Slitaz:
 	>Configuração de Rede</a>
 </p>
 
-<a name="apps"></a>
-<h3>Aplicativos</h3>
+
+<h3 id="apps">Aplicativos</h3>
 <p>
 Para obter uma lista de todos os aplicativos gráficos você pode usar
 o botão de Menu do SliTaz na parte de baixo e esquerda da tela. Para uma
 lista das ferramentas de linha de comando, pode abrir o terminal e clicar
 por duas vezes a tecla Tab. Para ter uma lista de todos os pacotes de 
 aplicativo instalados use o gerenciador de pacotes, iniciando-o pelo seu 
-ícone na parte de baixo e direita ou pelo menu "Ferramentas do Sistema". 
+ícone na parte de baixo e direita ou pelo menu “Ferramentas do Sistema”. 
 Para instalar um novo pacote deve-se possuir ou uma conexão de rede ou
 o DVD que contém todos os pacotes ou um dispositivo USB que contenha 
 pacotes baixados de outra máquina. O gerenciador de pacotes também pode
@@ -97,15 +96,15 @@ ser utilizado na linha de comando, abrindo o terminal e digitando
 <code>tazpkg</code>.
 </p>
 
-<a name="office"></a>
-<h3>Suíte de Escritório</h3>
+
+<h3 id="office">Suíte de Escritório</h3>
 <p>
 O SliTaz fornece em seu repositório de pacotes alguns aplicativos de 
 escritório leves. Todos estes pacotes podem ser instalados com alguns
 cliques a partir do gerenciador de pacotes. O SliTaz também fornece
 uma maneira simples de instalar a famosa e poderosa suíte de escritório
 OpenOffice: busque por OpenOffice no gerenciador de pacotes, dê um duplo
-clique em "get-OpenOffice3" e instale o script deixando a opção
+clique em “get-OpenOffice3” e instale o script deixando a opção
 <code>Auto exec</code> selecionada.
 </p>
 <p>
@@ -114,8 +113,8 @@ de textos, o Gnumeric para planilhas e o Homebank para genenciar contas
 bancárias.
 </p>
 
-<a name="multimedia"></a>
-<h3>Multimídia</h3>
+
+<h3 id="multimedia">Multimídia</h3>
 <p>
 A maioria das variantes (flavors) do SliTaz incluem uma vasta gama de 
 drivers de placas de som, um mixer de volume e um reprodutor de áudio 
@@ -133,20 +132,20 @@ melhores reprodutores de vídeo disponíveis para GNU/Linux: <code>mplayer</code
 <code>xine-ui</code> e <code>vlc</code>.
 </p>
 
-<a name="info"></a>
-<h3>Informações do Sistema</h3>
+
+<h3 id="info">Informações do Sistema</h3>
 <p>
 você pode obter informações sobre seu sistema abrindo o menu e clicando
-em "Ferramentas do Sistema" -> "Informações e Testes do Sistema" e então,
-quando o programa abrir, clicar em "Summary". Clicar em outras opções
+em “Ferramentas do Sistema” → “Informações e Testes do Sistema” e então,
+quando o programa abrir, clicar em “Summary”. Clicar em outras opções
 trará informações mais detalhadas, e usando os benchmarks lhe dará uma
 idéia de quão rápido é o seu sistema. Para obter uma lista e controlar
-todos os processos que estão rodando você pode usar o "Gerenciador de 
-Processos".
+todos os processos que estão rodando você pode usar o “Gerenciador de 
+Processos”.
 </p>
 
-<a name="root"></a>
-<h3>Tornando-se usuário root</h3>
+
+<h3 id="root">Tornando-se usuário root</h3>
 <p>
 Por padrão o SliTaz não executa o ambiente desktop como o usuário 
 administrador root: sempre é pedida a senha do root (a padrão é 
@@ -156,18 +155,18 @@ usuário. Para se tornar root abra o terminal, digite <code>su</code>
 e informe a senha do root.
 </p>
 
-<a name="install"></a>
-<h3>Instalação</h3>
+
+<h3 id="install">Instalação</h3>
 <p>
 O SliTaz pode ser instalado no disco rígido ou em um drive usb utilizando
-o "Instalador do SliTaz" que se encontra no menu "Ferramentas do Sistema".
+o “Instalador do SliTaz” que se encontra no menu “Ferramentas do Sistema”.
 Este utilitário faz uma instalação completa do SliTaz no disco rígido.
 Assim, o SliTaz não será mais carregado na memória RAM como no modo LiveCD
 ou Frugal e todas as alterações serão persistentes.
 </p>
 <p>
-Para criar um sistema LiveUSB você pode usar o "Tazusb LiveUSB Tool" no
-menu "Ferramentas do Sistema" ou digitar <code>tazusb</code> na linha de
+Para criar um sistema LiveUSB você pode usar o “Tazusb LiveUSB Tool” no
+menu “Ferramentas do Sistema” ou digitar <code>tazusb</code> na linha de
 comando. Maiores informações podem ser encontradas no Manual do SliTaz:
 <a href="http://doc.slitaz.org/pt:handbook:liveusb">Mídia LiveUSB</a>
 </p>
@@ -175,9 +174,9 @@ comando. Maiores informações podem ser encontradas no Manual do SliTaz:
 <!-- End of content -->
 </div>
 
-<div id="footer">
-	Copyright &copy; 2013 <a href="http://www.slitaz.org/">SliTaz GNU/Linux</a>
-</div>
+<footer>
+	Copyright © 2013 <a href="http://www.slitaz.org/">SliTaz GNU/Linux</a>
+</footer>
 
 </body>
 </html>
