--- a/slitaz/index.ru.html
+++ b/slitaz/index.ru.html
@@ -4,26 +4,25 @@
 	<meta charset="utf-8" />
 	<title>SliTaz — Системная документация (ru)</title>
 	<link rel="shortcut icon" href="favicon.ico" />
-	<link rel="stylesheet" type="text/css" href="style.css" />
+	<link rel="stylesheet" type="text/css" href="../slitaz-doc.css" />
 </head>
 <body>
 
-<!-- Header -->
-<div id="header">
+<header>
 	<h1>SliTaz — Системная документация</h1>
-</div>
+</header>
 
 <!-- Languages -->
 <div id="lang">
 	<a href="http://www.slitaz.org/i18n.php">
-		<img src="images/locale.png" alt="Locale" /></a>
+		<img src="images/locale.png" alt="Locale:" /></a>
 	<a href="index.cn.html">cn</a>
 	<a href="index.de.html">de</a>
 	<a href="index.en.html">en</a>
 	<a href="index.fr.html">fr</a>
 	<a href="index.hu.html">hu</a>
 	<a href="index.pt.html">pt</a>
-	<a href="index.ru.html">ru</a>
+	<strong>ru</strong>
 </div>
 
 <!-- Content. -->
@@ -104,16 +103,16 @@ Support can be found on the SliTaz mailing list or the community
 
 <h3 id="install">Установка</h3>
 
-<p>SliTaz может быть установлен ​​на жесткий диск или на USB-накопитель при помощи программы «Установщик SliTaz» из меню «Системные утилиты». Установщик производит «полную» установку. SliTaz больше не будет работать в оперативной памяти (RAM), как в «живом» или в «скромном» режиме, а вся информация будет сразу же сохраняться на жесткий диск.</p>
+<p>SliTaz может быть установлен на жесткий диск или на USB-накопитель при помощи TazPanel, выбрав в меню «Install → Install SliTaz». Установщик производит «полную» установку. SliTaz больше не будет работать в оперативной памяти (RAM), как в «живом» или в «скромном» режиме, а вся информация будет сразу же сохраняться на жесткий диск.</p>
 
-<p>Для создания системы LiveUSB вы можете воспользоваться утилитой «Tazusb — утилита LiveUSB» из меню «Системные утилиты» или командой <code>tazusb</code> из командной строки. Более подробную информацию можно найти в Руководстве SliTaz: <a href="http://doc.slitaz.org/ru:handbook:liveusb">Носители LiveUSB</a></p>
+<p>Для создания системы LiveUSB вы можете воспользоваться утилитой «Создать LiveUSB» из меню «Система» или командой <code>tazusb</code> из командной строки. Более подробную информацию можно найти в Руководстве SliTaz: <a href="http://doc.slitaz.org/ru:handbook:liveusb">Носители LiveUSB</a></p>
 
 <!-- End of content -->
 </div>
 
-<div id="footer">
+<footer>
 	Copyright © 2013 <a href="http://www.slitaz.org/">SliTaz GNU/Linux</a>
-</div>
+</footer>
 
 </body>
 </html>
