--- a/slitaz/relnotes.en.html
+++ b/slitaz/relnotes.en.html
@@ -4,22 +4,21 @@
 	<meta charset="utf-8" />
 	<title>SliTaz 4.0 Releases Notes</title>
 	<link rel="shortcut icon" href="favicon.ico" />
-	<link rel="stylesheet" type="text/css" href="style.css" />
+	<link rel="stylesheet" type="text/css" href="../slitaz-doc.css" />
 </head>
 <body>
 
-<!-- Header -->
-<div id="header">
+<header>
 	<h1>SliTaz 4.0 Releases Notes</h1>
-</div>
+</header>
 
 <!-- Languages -->
 <div id="lang">
 	<a href="http://www.slitaz.org/i18n.php">
 		<img src="images/locale.png" alt="Locale:" /></a>
-	<a href="relnotes.en.html">en</a> |
-	<a href="relnotes.fr.html">fr</a> |
-    <a href="relnotes.pt.html">pt</a> |
+	<strong>en</strong>
+	<a href="relnotes.fr.html">fr</a>
+	<a href="relnotes.pt.html">pt</a>
 	<a href="relnotes.ru.html">ru</a>
 </div>
 
@@ -220,16 +219,16 @@
 	<li>Samuel Trassare</li>
 	<li>Christian Mesh</li>
 	<li>Alexander Medvedev</li>
-        <li>Richard Dunbar</li>
-	<li>...</li>
+	<li>Richard Dunbar</li>
+	<li>…</li>
 </ul>
 
 <!-- End of content -->
 </div>
 
-<div id="footer">
+<footer>
 	Copyright © 2013 <a href="http://www.slitaz.org/" target="_blank">SliTaz GNU/Linux</a>
-</div>
+</footer>
 
 </body>
 </html>
