--- a/slitaz/index.de.html
+++ b/slitaz/index.de.html
@@ -4,21 +4,20 @@
 	<meta charset="utf-8" />
 	<title>SliTaz - System doc (de)</title>
 	<link rel="shortcut icon" href="favicon.ico" />
-	<link rel="stylesheet" type="text/css" href="style.css" />
+	<link rel="stylesheet" type="text/css" href="../slitaz-doc.css" />
 </head>
 <body>
 
-<!-- Header -->
-<div id="header">
+<header>
 	<h1>SliTaz - System doc</h1>
-</div>
+</header>
 
 <!-- Languages -->
 <div id="lang">
 	<a href="http://www.slitaz.org/i18n.php">
-		<img src="images/locale.png" alt="locale.png" /></a>
+		<img src="images/locale.png" alt="Locale:" /></a>
 	<a href="index.cn.html">cn</a>
-	<a href="index.de.html">de</a>
+	<strong>de</strong>
 	<a href="index.en.html">en</a>
 	<a href="index.fr.html">fr</a>
 	<a href="index.hu.html">hu</a>
@@ -44,9 +43,9 @@
 <!-- End of content -->
 </div>
 
-<div id="footer">
-	Copyright &copy; 2013 <a href="http://www.slitaz.org/">SliTaz GNU/Linux</a>
-</div>
+<footer>
+	Copyright © 2013 <a href="http://www.slitaz.org/">SliTaz GNU/Linux</a>
+</footer>
 
 </body>
 </html>
