--- a/slitaz/index.ru.html
+++ b/slitaz/index.ru.html
@@ -67,19 +67,19 @@ Support can be found on the SliTaz mailing list or the community
 
 <h3 id="network">Сетевые соединения</h3>
 
-<p>Нажмите кнопку «Сетевой монитор» в правой нижней части экрана, затем «Настройка» — запустится менеджер сети (netbox). Затем вы можете перейти во вкладку «DHCP», нажать «Start», и SliTaz отправит запрос DHCP на локальный роутер. Вы также можете настроить статический IP, PPPoE, PPP, VPN и другие параметры сети, используя для этого соответствующие вкладки. Для настройки беспроводного соединения, вы можете использовать wifibox, нажав кнопку «Беспроводный менеджер» в менеджере сети, либо с помощью пункта меню «Системные утилиты» → «Беспроводные сетевые соединения».</p>
+<p>Нажмите кнопку «Сетевой монитор» в правой нижней части экрана, затем «Настройка» — запустится менеджер сети (netbox). Затем вы можете перейти во вкладку «DHCP», нажать «Start», и SliTaz отправит запрос DHCP на локальный роутер. Вы также можете настроить статический IP, PPPoE, PPP, VPN и другие параметры сети, используя для этого соответствующие вкладки. Для настройки беспроводного соединения вы можете использовать wifibox, нажав кнопку «Беспроводный менеджер» в менеджере сети, либо с помощью пункта меню «Системные утилиты» → «Беспроводные сетевые соединения».</p>
 
 <p>Более подробную документацию вы можете найти в Handbook: <a href="http://doc.slitaz.org/ru:handbook:networkconf">Настройка сети</a></p>
 
 
 <h3 id="apps">Приложения</h3>
 
-<p>Чтобы увидеть список всех графических приложений, нажмите на кнопку меню (в левом нижнем углу экрана). Чтобы просмотреть список утилит командной строки, откройте терминал и дважды нажмите на кнопку табуляции. Чтобы получить список всех установленных пакетов, запустите менеджер пакетов, нажав на значок в LXPanel или на соответствующий пункт в меню «Системные утилиты». Для установки новых пакетов, вы должны быть подключены к сети, либо иметь DVD (USB-флеш) с загруженными пакетами. Конечно же, любую операцию по управлению пакетами также можно сделать командой <code>tazpkg</code> в командной строке.</p>
+<p>Чтобы увидеть список всех графических приложений, нажмите кнопку системного меню (кнопка «Приложения» на панели). Чтобы просмотреть список утилит командной строки, откройте терминал и дважды нажмите кнопку табуляции. Чтобы получить список всех установленных пакетов, запустите менеджер пакетов, нажав на значок в LXPanel или на соответствующий пункт в меню «Системные». Для установки новых пакетов вы должны быть подключены к сети, либо иметь DVD (USB-флеш) с загруженными пакетами. Конечно же, любую операцию по управлению пакетами также можно сделать командой <code>tazpkg</code> в командной строке.</p>
 
 
 <h3 id="office">Офисный пакет</h3>
 
-<p>База данных пакетов SliTaz содержит несколько легких офисных приложений. Все эти пакеты можно легко установить в несколько кликов при помощи менеджера пакетов. В SliTaz также есть несложный способ установить мощный пакет OpenOffice: поищите «OpenOffice» в менеджере пакетов, дважды щелкните на «get-OpenOffice3» и установите скрипт с включенной опцией <code>Автостарт</code>.</p>
+<p>База данных пакетов SliTaz содержит несколько легких офисных приложений. Эти пакеты можно просто установить в несколько кликов при помощи менеджера пакетов. В SliTaz также есть несложный способ установить мощный пакет OpenOffice: поищите «OpenOffice» в менеджере пакетов, дважды щелкните на «get-OpenOffice3» и установите скрипт с включенной опцией <code>Автостарт</code>.</p>
 
 <p>Вы можете использовать облегченный офисный пакет: Abiword для работы с текстами, Gnumeric для электронных таблиц и HomeBank для ведения домашней бухгалтерии.</p>
 
@@ -93,7 +93,7 @@ Support can be found on the SliTaz mailing list or the community
 
 <h3 id="info">Системная информация</h3>
 
-<p>Вы можете получить информацию о вашей системе, нажав «Информация о системе» в меню «Системные утилиты», а затем перейдя на вкладку «Summary». Переходя по другим вкладкам, вы можете получить более подробную информацию, а тесты дадут вам представление о том, как быстр ваш компьютер. Для просмотра списка и управления всеми текущими процессами, вы можете использовать «Диспетчер задач».</p>
+<p>Вы можете получить информацию о вашей системе, нажав «Информация о системе» в меню «Системные», а затем перейдя на вкладку «Summary». Переходя по другим вкладкам, вы можете получить более подробную информацию, а тесты дадут вам представление о том, как быстр ваш компьютер. Для просмотра списка и управления всеми текущими процессами, вы можете использовать «Диспетчер задач».</p>
 
 
 <h3 id="root">Как стать Root</h3>
@@ -105,7 +105,7 @@ Support can be found on the SliTaz mailing list or the community
 
 <p>SliTaz может быть установлен на жесткий диск или на USB-накопитель при помощи TazPanel, выбрав в меню «Install → Install SliTaz». Установщик производит «полную» установку. SliTaz больше не будет работать в оперативной памяти (RAM), как в «живом» или в «скромном» режиме, а вся информация будет сразу же сохраняться на жесткий диск.</p>
 
-<p>Для создания системы LiveUSB вы можете воспользоваться утилитой «Создать LiveUSB» из меню «Система» или командой <code>tazusb</code> из командной строки. Более подробную информацию можно найти в Руководстве SliTaz: <a href="http://doc.slitaz.org/ru:handbook:liveusb">Носители LiveUSB</a></p>
+<p>Для создания системы LiveUSB вы можете воспользоваться утилитой «Создать LiveUSB» из меню «Системные» или командой <code>tazusb</code> из командной строки. Более подробную информацию можно найти в Руководстве SliTaz: <a href="http://doc.slitaz.org/ru:handbook:liveusb">Носители LiveUSB</a></p>
 
 <!-- End of content -->
 </div>
