--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -191,7 +191,7 @@ Handbook: <a href="http://doc.slitaz.org/en:handbook:liveusb">LiveUSB media</a>
 </div>
 
 <footer>
-	Copyright © 2013 <a href="http://www.slitaz.org/">SliTaz GNU/Linux</a>
+	Copyright © <span class="year"></span> <a href="http://www.slitaz.org/">SliTaz GNU/Linux</a>
 </footer>
 
 </body>
