--- a/slitaz/index.fr.html
+++ b/slitaz/index.fr.html
@@ -61,7 +61,7 @@ de discussion ou <a href="http://forum.slitaz.org/">le forum</a>.
 </div>
 
 <footer>
-	Copyright © 2013 <a href="http://www.slitaz.org/">SliTaz GNU/Linux</a>
+	Copyright © <span class="year"></span> <a href="http://www.slitaz.org/">SliTaz GNU/Linux</a>
 </footer>
 
 </body>
