--- a/slitaz/index.pt.html
+++ b/slitaz/index.pt.html
@@ -175,7 +175,7 @@ comando. Maiores informações podem ser encontradas no Manual do SliTaz:
 </div>
 
 <footer>
-	Copyright © 2013 <a href="http://www.slitaz.org/">SliTaz GNU/Linux</a>
+	Copyright © <span class="year"></span> <a href="http://www.slitaz.org/">SliTaz GNU/Linux</a>
 </footer>
 
 </body>
