--- a/slitaz/index.ru.html
+++ b/slitaz/index.ru.html
@@ -111,7 +111,7 @@ Support can be found on the SliTaz mailing list or the community
 </div>
 
 <footer>
-	Copyright © 2013 <a href="http://www.slitaz.org/">SliTaz GNU/Linux</a>
+	Copyright © <span class="year"></span> <a href="http://www.slitaz.org/">SliTaz GNU/Linux</a>
 </footer>
 
 </body>
