--- a/slitaz/relnotes.fr.html
+++ b/slitaz/relnotes.fr.html
@@ -189,7 +189,7 @@
 </div>
 
 <footer>
-	Copyright © 2013 <a href="http://www.slitaz.org/" target="_blank">SliTaz GNU/Linux</a>
+	Copyright © <span class="year"></span> <a href="http://www.slitaz.org/" target="_blank">SliTaz GNU/Linux</a>
 </footer>
 
 </body>
