--- a/slitaz/index.hu.html
+++ b/slitaz/index.hu.html
@@ -53,7 +53,7 @@
 </div>
 
 <footer>
-	Copyright © 2013 <a href="http://www.slitaz.org/">SliTaz GNU/Linux</a>
+	Copyright © <span class="year"></span> <a href="http://www.slitaz.org/">SliTaz GNU/Linux</a>
 </footer>
 
 </body>
